# Knn-Algorithm

./: AlgorithmKnn.cpp  AlgorithmKnn.h  CLI.cpp  CLI.h  CMakeLists.txt  Change.cpp  Change.h  Classify.cpp  Classify.h  Client.cpp  Command.cpp  Command.h  DB.cpp  DB.h  DefaultIO.h  Display.cpp  Display.h  DistanceFuncManager.cpp  DistanceFuncManager.h  Download.cpp  Download.h  InputManager.cpp  InputManager.h  Neighbor.cpp  Neighbor.h  README.md  Server.cpp  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h  Update.cpp  Update.h  client.out  makefile  server.out
